--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Menú</title>
     </head>
     <body>
+        <div class="Contenedor">
         <h1>Ejemplos de la guia 1 </h1>
         <div class="menu">
                 <nav><a href="Guia1/ejemplo1/presupuesto.html">Ejemplo 1: Presupuesto</a></nav>
@@ -39,9 +40,8 @@
         </div>
         <h1>Complementarios De la guía 2 </h1>
         <div class="menu">
-            <ul>
-                <li><a href="#">No hay ejemplos Complementarios :C</a></li>
-            </ul>
+            <nav><a href="#">No hay ejemplos Complementarios :C, Tenga Piedad de nosotros</a></nav>
+        </div>
         </div>
     </body>
 </html>
