--- a/index.html
+++ b/index.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/index.css" />
-        <title>Menú</title>
-    </head>
-    <body>
-        <div class="Contenedor">
-            <h1>Ejemplos de la guia 1 </h1>
-            <div class="menu">
-                    <nav><a href="Guia1/ejemplo1/presupuesto.html">Ejemplo 1: Presupuesto</a></nav>
-                    <nav><a href="Guia1/ejemplo2/tablamultiplicar.html">Ejemplo 2: Tablas de Multiplicar</a></nav>
-                    <nav><a href="Guia1/ejemplo3/calculadora.html">Ejemplo 3: Calculadora basica</a></nav>
-                    <nav><a href="Guia1/ejemplo4/calculoareas.html">Ejemplo 4: Calculo de Áreas</a></nav>
-                    <nav><a href="Guia1/ejemplo5/diasmes.html">Ejemplo 5: Días y mes</a></nav>
-                    <nav><a href="Guia1/ejemplo6/cuotacasa.html">Ejemplo 6: Cuota de Casa</a></nav>
-            </div>
-
-            <h1>Complementarios De la guía 1 </h1>
-            <div class="menu">
-                <ul>
-                    <nav><a href="Guia1/ejemplo7/conver.html">Ejemplo 2</a></nav>
-                    <nav><a href="Guia1/ejemplo8/temperaturas.html">Ejemplo 3</a></nav>
-                </ul>
-            </div>
-
-            <h1>Ejemplos De la guía 2 </h1>
-            <div class="menu">
-                    <nav><a href="Guia2/ejemplo1/promedio.html">Ejemplo 1</a></nav>
-                    <nav><a href="Guia2/ejemplo2/navegador.html">Ejemplo 2</a></nav>
-                    <nav><a href="Guia2/ejemplo3/encuesta.html">Ejemplo 3</a></nav>
-                    <nav><a href="Guia2/ejemplo4/math.html">Ejemplo 4</a></nav>
-                    <nav><a href="Guia2/ejemplo5/forms.html">Ejemplo 5</a></nav>
-                    <nav><a href="Guia2/ejemplo6/burbuja.html">Ejemplo 6</a></nav>
-                    <nav><a href="Guia2/ejemplo7/ciudades.html">Ejemplo 7</a></nav>
-                    <nav><a href="Guia2/ejemplo10/burbuja.html">Ejemplo 10</a></nav>
-            </div>
-            <h1>Complementarios De la guía 2 </h1>
-            <div class="menu">
-                <nav><a href="#">No hay ejemplos Complementarios :C, Tenga Piedad de nosotros</a></nav>
-            </div>
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hola Mundo</title>
+    <link rel="stylesheet" href="css/index.css">
+    <script src="https://kit.fontawesome.com/28b946baf8.js" crossorigin="anonymous"></script>
+</head>
+<body>
+    <header>
+        <nav class="navegacion">
+            <ul class="menu">
+                <li><a href="" >Guía 1</a>
+                    <ul class="submenu">
+                        <li><a href="Guia1/ejemplo1/presupuesto.html">Ejemplo 1</a></li>
+                        <li><a href="Guia1/ejemplo2/tablamultiplicar.html">Ejemplo 2</a></li>
+                        <li><a href="Guia1/ejemplo3/calculadora.html">Ejemplo 3</a></li>
+                        <li><a href="Guia1/ejemplo4/calculoareas.html">Ejemplo 4</a></li>
+                        <li><a href="Guia1/ejemplo5/diasmes.html">Ejemplo 5</a></li>
+                        <li><a href="Guia1/ejemplo6/cuotacasa.html">Ejemplo 6</a></li>
+                        <li><a href="Guia1/ejemplo7/conver.html">Ejemplo 7</a></li>
+                        <li><a href="Guia1/ejemplo8/temperaturas.html">Ejercicio 8</a></li>
+                    </ul>
+                </li>
+                <li><a href="" >Guía 2</a>
+                    <ul class="submenu">
+                        <li><a href="Guia2/ejemplo1/promedio.html">Ejemplo 1</a></li>
+                        <li><a href="Guia2/ejemplo2/navegador.html">Ejemplo 2</a></li>
+                        <li><a href="Guia2/ejemplo3/encuesta.html">Ejemplo 3</a></li>
+                        <li><a href="Guia2/ejemplo4/math.html">Ejemplo 4</a></li>
+                        <li><a href="Guia2/ejemplo5/forms.html">Ejemplo 5</a></li>
+                        <li><a href="Guia2/ejemplo6/burbuja.html">Ejemplo 6</a></li>
+                        <li><a href="Guia2/ejemplo7/ciudades.html">Ejemplo 7</a></li>
+                        <li><a href="Guia2/ejemplo10/burbuja.html">Ejercicio 1</a></li>
+                    </ul>
+                </li>
+                <li><a href="" >Guía 3</a>
+                    <ul class="submenu">
+                        <li><a href="Guia3/ejemplo1/eventos.html">Ejemplo 1</a></li>
+                        <li><a href="Guia3/ejemplo2/enlaces.html">Ejemplo 2</a></li>
+                        <li><a href="Guia3/ejemplo3/datos.html">Ejemplo 3</a></li>
+                        <li><a href="Guia3/ejemplo4/solonumeros.html">Ejemplo 4</a></li>
+                        <li><a href="Guia3/ejemplo5/aleatorios.html">Ejemplo 5</a></li>
+                        <li><a href="Guia3/ejemplo6/tiradados.html">Ejemplo 6</a></li>
+                        <li><a href="Guia3/ejercicio1/calculadora.html">Ejercicio 1</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section></section>
+</body>
 </html>
